Update `firebase-emulator-suite` rebuild script

--- a/firebase-emulator-suite/codelab_rebuild.yaml
+++ b/firebase-emulator-suite/codelab_rebuild.yaml
@@ -491,7 +491,7 @@ steps:
            import 'entry.dart';
            
            class AppState {
-          @@ -17,28 +20,53 @@ class AppState {
+          @@ -17,28 +20,52 @@ class AppState {
                );
              }
            
@@ -534,15 +534,14 @@ steps:
           +    FirebaseFirestore.instance.collection('Entries').snapshots().listen((
           +      event,
           +    ) {
-          +      final entries =
-          +          event.docs.map((doc) {
-          +            final data = doc.data();
-          +            return Entry(
-          +              date: data['date'] as String,
-          +              text: data['text'] as String,
-          +              title: data['title'] as String,
-          +            );
-          +          }).toList();
+          +      final entries = event.docs.map((doc) {
+          +        final data = doc.data();
+          +        return Entry(
+          +          date: data['date'] as String,
+          +          text: data['text'] as String,
+          +          title: data['title'] as String,
+          +        );
+          +      }).toList();
           +
           +      _entriesStreamController.add(entries);
           +    });
