Update `forge2d_game` rebuild script

--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -11784,10 +11784,9 @@ steps:
             Ground(Vector2 position, Sprite sprite)
               : super(
                   renderBody: false,
-                  bodyDef:
-                      BodyDef()
-                        ..position = position
-                        ..type = BodyType.static,
+                  bodyDef: BodyDef()
+                    ..position = position
+                    ..type = BodyType.static,
                   fixtureDefs: [
                     FixtureDef(
                       PolygonShape()..setAsBoxXY(groundSize / 2, groundSize / 2),
@@ -11970,30 +11969,30 @@ steps:
           // Copyright 2024 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'dart:math';
           import 'dart:ui' as ui;
-          
+
           import 'package:flame/components.dart';
           import 'package:flame/extensions.dart';
           import 'package:flame_forge2d/flame_forge2d.dart';
-          
+
           const brickScale = 0.5;
-          
+
           enum BrickType {
             explosive(density: 1, friction: 0.5),
             glass(density: 0.5, friction: 0.2),
             metal(density: 1, friction: 0.4),
             stone(density: 2, friction: 1),
             wood(density: 0.25, friction: 0.6);
-          
+
             final double density;
             final double friction;
-          
+
             const BrickType({required this.density, required this.friction});
             static BrickType get randomType => values[Random().nextInt(values.length)];
           }
-          
+
           enum BrickSize {
             size70x70(ui.Size(70, 70)),
             size140x70(ui.Size(140, 70)),
@@ -12003,16 +12002,16 @@ steps:
             size220x140(ui.Size(220, 140)),
             size140x220(ui.Size(140, 220)),
             size70x220(ui.Size(70, 220));
-          
+
             final ui.Size size;
-          
+
             const BrickSize(this.size);
-          
+
             static BrickSize get randomSize => values[Random().nextInt(values.length)];
           }
-          
+
           enum BrickDamage { none, some, lots }
-          
+
           Map<BrickDamage, String> brickFileNames(BrickType type, BrickSize size) {
             return switch ((type, size)) {
               (BrickType.explosive, BrickSize.size140x70) => {
@@ -12217,7 +12216,7 @@ steps:
               },
             };
           }
-          
+
           class Brick extends BodyComponent {
             Brick({
               required this.type,
@@ -12229,10 +12228,9 @@ steps:
                  _sprites = sprites,
                  super(
                    renderBody: false,
-                   bodyDef:
-                       BodyDef()
-                         ..position = position
-                         ..type = BodyType.dynamic,
+                   bodyDef: BodyDef()
+                     ..position = position
+                     ..type = BodyType.dynamic,
                    fixtureDefs: [
                      FixtureDef(
                          PolygonShape()..setAsBoxXY(
@@ -12245,20 +12243,20 @@ steps:
                        ..friction = type.friction,
                    ],
                  );
-          
+
             late final SpriteComponent _spriteComponent;
-          
+
             final BrickType type;
             final BrickSize size;
             final Map<BrickDamage, Sprite> _sprites;
-          
+
             BrickDamage _damage;
             BrickDamage get damage => _damage;
             set damage(BrickDamage value) {
               _damage = value;
               _spriteComponent.sprite = _sprites[value];
             }
-          
+
             @override
             Future<void> onLoad() {
               _spriteComponent = SpriteComponent(
@@ -12331,9 +12329,6 @@ steps:
           +    }
           +  }
            }
-      - name: Format lib/components/game.dart
-        path: forge2d_game
-        dart: format lib/components/game.dart
       - name: Build web app
         path: forge2d_game
         flutter: build web
@@ -12383,12 +12378,11 @@ steps:
               : _sprite = sprite,
                 super(
                   renderBody: false,
-                  bodyDef:
-                      BodyDef()
-                        ..position = position
-                        ..type = BodyType.static
-                        ..angularDamping = 0.1
-                        ..linearDamping = 0.1,
+                  bodyDef: BodyDef()
+                    ..position = position
+                    ..type = BodyType.static
+                    ..angularDamping = 0.1
+                    ..linearDamping = 0.1,
                   fixtureDefs: [
                     FixtureDef(CircleShape()..radius = playerSize / 2)
                       ..restitution = 0.4
@@ -12683,10 +12677,9 @@ steps:
             Enemy(Vector2 position, Sprite sprite)
               : super(
                   renderBody: false,
-                  bodyDef:
-                      BodyDef()
-                        ..position = position
-                        ..type = BodyType.dynamic,
+                  bodyDef: BodyDef()
+                    ..position = position
+                    ..type = BodyType.dynamic,
                   fixtureDefs: [
                     FixtureDef(
                       PolygonShape()..setAsBoxXY(enemySize / 2, enemySize / 2),
