Update `github-client` rebuild script

--- a/github-client/codelab_rebuild.yaml
+++ b/github-client/codelab_rebuild.yaml
@@ -1075,10 +1075,9 @@ steps:
             @override
             initState() {
               super.initState();
-              _pullRequests =
-                  widget.gitHub.pullRequests
-                      .list(RepositorySlug('flutter', 'flutter'))
-                      .toList();
+              _pullRequests = widget.gitHub.pullRequests
+                  .list(RepositorySlug('flutter', 'flutter'))
+                  .toList();
             }
 
             late Future<List<PullRequest>> _pullRequests;
@@ -1124,19 +1123,18 @@ steps:
               if (state.mounted) {
                 return showDialog(
                   context: state.context,
-                  builder:
-                      (context) => AlertDialog(
-                        title: const Text('Navigation error'),
-                        content: Text('Could not launch $url'),
-                        actions: <Widget>[
-                          TextButton(
-                            onPressed: () {
-                              Navigator.of(context).pop();
-                            },
-                            child: const Text('Close'),
-                          ),
-                        ],
+                  builder: (context) => AlertDialog(
+                    title: const Text('Navigation error'),
+                    content: Text('Could not launch $url'),
+                    actions: <Widget>[
+                      TextButton(
+                        onPressed: () {
+                          Navigator.of(context).pop();
+                        },
+                        child: const Text('Close'),
                       ),
+                    ],
+                  ),
                 );
               }
             }
